swagger ui fix and tags
