# ladon-rest/src/main/java/de/mc/ladon/rest/LadonRestApi.kt
@@ -1,14 +1,0 @@
-package de.mc.ladon.rest
-//
-//import de.mc.ladon.rest.api.ServicesApi
-//import de.mc.ladon.rest.model.ResponseSuccess
-//import org.springframework.http.ResponseEntity
-//import org.springframework.stereotype.Controller
-//
-////@Controller
-//open class LadonRestApi : ServicesApi {
-//
-//    override fun servicesRestV1ContentBucketKeyDelete(bucket: String?, key: String?, version: String?): ResponseEntity<ResponseSuccess> {
-//        return super.servicesRestV1ContentBucketKeyDelete(bucket, key, version)
-//    }
-//}
